--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "codegen": "graphql-codegen --config ./src/apollo/codegen.ts",
-    "codegenw": "graphql-codegen --config ./src/apollo/codegen.ts -w",
+    "codegen": "graphql-codegen --config ./src/libs/apollo/codegen.ts",
+    "codegenw": "graphql-codegen --config ./src/libs/apollo/codegen.ts -w",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
@@ -20,6 +20,7 @@
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.65.0",
+    "apollo-upload-client": "^18.0.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "graphql": "^16.10.0",
@@ -34,12 +35,14 @@
     "react-native-bootsplash": "^6.3.2",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-document-picker": "^9.3.1",
+    "react-native-fetch-api": "^3.0.0",
     "react-native-gesture-handler": "^2.22.1",
     "react-native-image-picker": "^7.2.3",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-keychain": "^9.2.2",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.7.0",
+    "react-native-polyfill-globals": "^3.1.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
@@ -69,6 +72,7 @@
     "@react-native/eslint-config": "0.77.0",
     "@react-native/metro-config": "0.77.0",
     "@react-native/typescript-config": "0.77.0",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
